# opengl_initializr

./: CMakeLists.txt  README.md  main.cpp
assets/shaders/: frag.glsl
include/: camera.h  pbrmaterial.h  shader.h  texture.h
include/geometries/: plane.h
src/: main.cpp
